* Customization through import of 'scripts/custom/*.pl' (#7138)

Bugs fixed
* Performance fixes for stored procedures being slow on huge databases (#7072)
* Multiple fixes on AR/AP template transactions
* Command 'setup' of ledgersmb-admin erroneously marked unimplemented (#7367)

Code cleanup
* Continued removal of code based on the DBObject coding paradigm

Dependency updates
* 


Changelog for 1.10 Series
Released 2022-10-08

Changelog for 1.10.16
* Hide CSS files from the theme drop-down which render the app unusable (#7326)
* Improve HTML compliance by moving INPUT tags around inside TABLE tags (#7323)
* Fix addition of second and further make/model rows in parts (#7346)
* Fix typo in setting name (#7337)


Changelog for 1.10.15
* Fix failure to save GL template transactions due to number formatting (#7302)


Changelog for 1.10.14
* Fix e-mail addresses on aging statement mails (#7235)
* Fix error popup after successfully sending aging statement mail (#7242)
* Fix 'cleared balance' on overlapping approved reconciliations (#7244)


Changelog for 1.10.13
* Aging reports per account; do not all entity invoices (#7177)
* Follow up to Print buttons fix -- Dojo doesn't support 'async') (#7131)
* Fix JOIN in 'all_managers' stored procedure (#7201)
* On CoA, Service, Goods and OOverhead import, hide transaction fields (#7212)
* Fix cloning companies being dependent on PG* environment vars (#7220)


Changelog for 1.10.12
* Random errors reported at the bottom of invoices without good reason (#7144)
* Asset disposal results in asset of disposed amount (#7143)
* Third address line on entity screen not saved for credit accounts (#7127)
* Print buttons call removed function (#7151)
* Empty inventory reports don't show in searches (#2661)
* Error thrown while mailing AR aging statements (#7158)
* CSV batch import fails due to incorrect function name (#7160)
* Align SQL setting-increment function with Perl implementation (#7186)