@@ -1,0 +1,3 @@
+
+alter table ar drop column entity_id;
+alter table ap drop column entity_id;
